k8s/frontend-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        type: frontend
        app: frontend
    spec:
      containers:
        - name: frontend-container
          image: listonfermi/wenet-frontend
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend-srv
spec:
  selector:
    type: frontend
    app: frontend
  ports:
    - name: frontend-ports
      protocol: TCP
      port: 3000
      targetPort: 3000
