k8s/user-service-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      type: backend
      app: user-service
  template:
    metadata:
      labels:
        type: backend
        app: user-service
    spec:
      containers:
        - name: user-service-container
          image: listonfermi/wenet-user-service
---
apiVersion: v1
kind: Service
metadata:
  name: user-service-srv
spec:
  selector:
    type: backend
    app: user-service
  ports:
      port: 5001
      targetPort: 5001
