k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "http://wenet.life"
spec:
  ingressClassName: "nginx"
  rules:
  - host: wenet.life
    http:
      paths:
      - path: /api/user-service/
        pathType: Prefix
        backend:
          service:
            name: user-service-srv
            port:
              number: 5001
      - path: /api/posts-service/
        pathType: Prefix
        backend:
          service:
            name: posts-service-srv
            port:
              number: 5002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-srv
            port:
              number: 3000
